# idec2024-data-analysis

./: README.md  plate_template.xlsx  pyproject.toml  succesful O_N propagation assays.xlsx
11092024_SIAH1_drift_sanger/: Phage_drifs_analysis.Rmd  Phage_drifs_analysis.html
20240725_first_tests/: 20240725_pES2008_pES1076_iDEC_att2.txt
20240727_logic_validation/: 20240727_analysis.ipynb  iDEC_Phage_propagation.xlsx  iDEC_Phage_propagation_analysis.txt  layout_plate.xlsx  layout_plate_alternative_1.xlsx  layout_plate_alternative_2.xlsx
20240814_logic_validation/: 20240813_analysis.ipynb  240813_qPCR.xlsx  240814_qPCR.xlsx  240814_qPCR_processed.xlsx  layout_plate1.xlsx
20240815_logic_validation/: 20240814_qPCR_iDEC.tsv  20240815_analysis.ipynb  layout_plate_1.xlsx  layout_plate_2.xlsx
20240820_logic_validation/: 20240820_analysis.ipynb  20240820_analysis_old.ipynb  20240820_qPCR_iDEC.txt  layout_plate1.xlsx  layout_plate2.xlsx
20240825_timepoint_qPCR/: 20240825_iDEC_timepoint_qPCR.xlsx
20240828/: 20240828_TS_iDEC.txt  20240828_analysis.ipynb  20240828_qPCR _div.xlsx  plate_template_28_08.xlsx
20240906_logic_validation/: 20240906_analysis.ipynb  20240906_iDEC_PhageProp_PANCE.txt  layout_plate.xlsx
20240909_logic_validation/: 20240909_analysis.ipynb  20240909_iDEC_prop_assay_repeat.txt  20240909_iDEC_prop_assay_repeat_annotated.xlsx  layout_plate_1.xlsx  layout_plate_2.xlsx
20240909_phage_size/: 20240909_phage_size.xlsx  20240909_phage_size_analysis.ipynb  20240909_phagesize_cts.csv
20240910_logic_validation/: 20240910_analysis.ipynb  layout_plate_1.xlsx  (+4 more)
(+31 files in other folders)
