[tool.poetry]
name = "idec2024-data-analysis"
version = "0.1.0"
description = ""
authors = ["Sasha M. <sasha.melkonyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
